--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -68,7 +68,7 @@ One of the most important and most interesting results of my work is the correla
 The increase in deposited cell clusters is due to a reduction in rosettiness.
 ```
 
-As explained in section \@ref(mat-intro-types), cells in the leading region have a more mesenchymal (more loose and more migrating) while cells in the trailing region have a more epithelial character. The cells in the trailing region therefore are more adhesive to their substrate, the basement membrane, while at the same time they are _pulled_ by the more mesenchymal leading cells towards the direction of migration. This results in traction forces in the trailing cells, becoming stronger at times of acceleration and towards the more trailing part, which potentially destabilizes the migrating cluster. To resist these forces, the cells within the cluster need to adhere strongly, which is made sure by Shroom3. Interestingly this also means that there are no external factors regulating the pattern of LL development, but that it is completely controlled by internal factors.
+As explained in section \@ref(intro-types), cells in the leading region have a more mesenchymal (more loose and more migrating) while cells in the trailing region have a more epithelial character. The cells in the trailing region therefore are more adhesive to their substrate, the basement membrane, while at the same time they are _pulled_ by the more mesenchymal leading cells towards the direction of migration. This results in traction forces in the trailing cells, becoming stronger at times of acceleration and towards the more trailing part, which potentially destabilizes the migrating cluster. To resist these forces, the cells within the cluster need to adhere strongly, which is made sure by Shroom3. Interestingly this also means that there are no external factors regulating the pattern of LL development, but that it is completely controlled by internal factors.
 
 ```{conjecture, echo = TRUE}
 The pattern of deposited Neuromasts is controlled by internal factors of the posterior Lateral Line Primordium.
